update SecurityConfig, load image on docker, add entity of order